--- a/flex-portfolio.html
+++ b/flex-portfolio.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flex Layout Portfolio by Alyanna</title>
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -21,7 +23,7 @@
     <main>
       <section class="hero">
         <!-- add cool background -->
-        <img href="" alt="photo of Alyanna smiling" />
+        
 
         <!-- this will be on left -->
         <h1>Hej, thanks for checking out my portfolio!</h1>
