cleaning up the repo to prepare for real portfolio

--- a/flex-portfolio.html
+++ b/flex-portfolio.html
@@ -24,7 +24,7 @@
       <section class="hero">
         <!-- add cool background -->
         
-
+        <img src="assets/yanna.jpg" alt="alyanna-smiling" class="hero-pic">
         <!-- this will be on left -->
         <h1>Hej, thanks for checking out my portfolio!</h1>
         <p>I'm Alyanna Karlsson, a fullstack developer in the making.</p>
